# Diploma-Engine

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/components/: CMakeLists.txt  builtin_component.cpp  builtin_component.h  component.cpp  component.h  component_internal_base.cpp  component_internal_base.h  component_manager.cpp  component_manager.h  component_manager_impl.cpp  component_manager_impl.h  component_registrar.cpp  component_registrar.h  components_manager.cpp  components_manager.h  mesh_renderer_component.h  render_component.h  renderer_component.h  transform_component.cpp  transform_component.h  transform_component_impl.cpp  transform_component_impl.h
engine/core/entity/: CMakeLists.txt  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  entity_manager_accessor.cpp  entity_manager_accessor.h  entity_manager_impl.cpp  entity_manager_impl.h
engine/core/input/: CMakeLists.txt  codes.h  input_system.cpp  input_system.h  input_system_accessor.cpp  input_system_accessor.h  input_system_impl.cpp  input_system_impl.h
engine/core/math/: CMakeLists.txt  math_helpers.cpp  math_helpers.h  matrix2x2.cpp  matrix2x2.h  matrix3x3.h  matrix4x4.h  quaternion.h  ray.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.h
engine/core/objects/: CMakeLists.txt  game_object.cpp  game_object.h  objects_manager.cpp  objects_manager.h
engine/core/resources/: CMakeLists.txt  Shader.cpp  Shader.h  material.cpp  material.h  mesh.cpp  mesh.h  resource_manager.h  resource_registrar.cpp  resource_registrar.h
engine/core/time/: CMakeLists.txt  scoped_time.cpp  scoped_time.h  time_manager.cpp  time_manager.h  time_manager_impl.cpp  time_manager_impl.h
engine/debug/: CMakeLists.txt
engine/debug/drawer/: CMakeLists.txt
engine/debug/logging/: CMakeLists.txt  debug_logger.cpp  debug_logger.h
engine/debug/memory/: CMakeLists.txt  memory_guard.cpp  memory_guard.h
engine/dependencies/: CMakeLists.txt
engine/dependencies/fmt/: CONTROL
engine/dependencies/fmt/debug/lib/: fmtd.lib
engine/dependencies/fmt/lib/: fmt.lib
engine/dependencies/fmt/share/fmt/: fmt-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
engine/dependencies/spdlog/: CONTROL
engine/dependencies/spdlog/debug/lib/: spdlogd.lib
engine/dependencies/spdlog/lib/: spdlog.lib
engine/dependencies/spdlog/share/spdlog/: spdlogConfigTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
engine/editor/: CMakeLists.txt  editor.cpp  editor.h  editor_selection.cpp  editor_selection.h  entity_selection.cpp  entity_selection.h  entity_selection_impl.cpp  entity_selection_impl.h  main.cpp
engine/editor/gizmo/: CMakeLists.txt  editor_drawer.cpp  editor_drawer.h  editor_drawer_primitives.cpp  editor_drawer_primitives.h  gizmo.cpp  gizmo.h  gizmo_elements.h  gizmo_manager.cpp  gizmo_manager.h
engine/editor/gui/: CMakeLists.txt  editor_viewport_window.cpp  editor_viewport_window.h  imgui_scoped_frame.cpp  imgui_scoped_frame.h  imgui_scoped_guards.cpp  imgui_scoped_guards.h
engine/editor/initialization/: CMakeLists.txt  editor_initializer.cpp  editor_initializer.h  main.cpp
engine/editor/projects/: CMakeLists.txt  projects_manager.cpp  projects_manager.h
engine/editor/viewport/: CMakeLists.txt  editor_camera.cpp  editor_camera.h  editor_framebuffer.h  editor_viewport.cpp  editor_viewport.h
engine/executable/: CMakeLists.txt  editor_runtime_pipeline.cpp  editor_runtime_pipeline.h  engine_main.cpp  engine_main.h  i_runtime_pipeline.cpp  i_runtime_pipeline.h  main.cpp  production_runtime_pipeline.cpp  production_runtime_pipeline.h  runtime.cpp  runtime.h  runtime_accessor.cpp  runtime_accessor.h  runtime_pipeline.h
engine/internal/: CMakeLists.txt
engine/internal/core/: CMakeLists.txt
engine/internal/core/constants/: CMakeLists.txt  editor_constants.h  runtime_constants.h
engine/internal/core/projects/: CMakeLists.txt
engine/internal/core/reflection/: CMakeLists.txt  serialization_helper.h
engine/internal/helpers/: CMakeLists.txt  assert.h  dependencies.h  enum_helpers.cpp  enum_helpers.h  iterator_provider.h  non_copyable.h  non_movable.h  persistent_vector.h  scoped_sequential_executor.h  signal.h
engine/internal/helpers/helpers/: CMakeLists.txt  construction_helper.cpp  construction_helper.h  non_copyable.h  non_movable.h  persistent_vector.cpp  persistent_vector.h
engine/internal/render/: CMakeLists.txt  i_framebuffer.cpp  i_framebuffer.h  i_render_context.h  i_render_pipeline.cpp  i_render_pipeline.h  scoped_frame.cpp  scoped_frame.h
engine/internal/render/glad/: CMakeLists.txt  glad_editor_drawer.cpp  glad_editor_drawer.h  glad_editor_drawer_primitives.cpp  glad_editor_drawer_primitives.h  glad_framebuffer.cpp  glad_framebuffer.h  glad_graphic_api.cpp  glad_graphic_api.h  glad_material.cpp  glad_material.h  glad_mesh.cpp  glad_mesh.h  glad_mesh_renderer_component.cpp  glad_mesh_renderer_component.h  glad_mesh_renderer_component_impl.cpp  glad_mesh_renderer_component_impl.h  glad_render_pipeline.cpp  glad_render_pipeline.h  glad_resource_manager.cpp  glad_resource_manager.h  glad_shader.cpp  glad_shader.h
engine/internal/render/graphic_api/: CMakeLists.txt  glad_graphic_api.cpp  glad_graphic_api.h  i_graphic_api.cpp  i_graphic_api.h
engine/internal/render/graphics/: CMakeLists.txt  i_graphic_api.h  i_render_pipeline.h
engine/internal/render/graphics/glad/: CMakeLists.txt  glad_graphic_api.cpp  glad_graphic_api.h  glad_material.cpp  glad_material.h  glad_render_component.cpp  glad_render_component.h  glad_render_pipeline.cpp  glad_render_pipeline.h  glad_resource_manager.cpp  glad_resource_manager.h  glad_shader.cpp  glad_shader.h
engine/internal/render/window/: CMakeLists.txt  window_manager.cpp  window_manager.h
engine/render/: CMakeLists.txt
engine/render/camera/: CMakeLists.txt
engine/render/graphics/: CMakeLists.txt
engine/render/lighting/: CMakeLists.txt
engine/render/window/: CMakeLists.txt  window.cpp  window.h  window_manager.cpp  window_manager.h  window_manager_impl.cpp  window_manager_impl.h
(+1 files in other folders)
